use java 17 instead of 21, cleanup, readme.md